--- a/as-auth/package.json
+++ b/as-auth/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^3.15.0"
   },
   "devDependencies": {
-    "jest": "^30.1.3"
+    "jest": "^30.1.3",
+    "supertest": "^7.1.4"
   }
 }
