--- a/as-auth/Dockerfile
+++ b/as-auth/Dockerfile
@@ -2,6 +2,11 @@ FROM node:22-alpine3.20
 
 WORKDIR /usr/src/app
 
+ARG MYSQL_DATABASE
+ARG MYSQL_USER
+ARG MYSQL_PASSWORD
+ARG MYSQL_HOSTNAME
+
 COPY package*.json ./
 RUN npm install
 
