--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,12 @@ services:
     ports:
       - "5000:5000"         # host:container
       - "9229:9229"
+    environment:
+      MYSQL_DATABASE: authdb
+      MYSQL_USER: authuser
+      MYSQL_PASSWORD: authpass
+      MYSQL_HOSTNAME: auth-db
+    
     depends_on:
       - auth-db
     networks:
