--- a/as-auth/package.json
+++ b/as-auth/package.json
@@ -8,6 +8,7 @@
     "dev": "NODE_ENV=dev node --inspect=0.0.0.0:9229 ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
