--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       MYSQL_PASSWORD: authpass
       MYSQL_HOSTNAME: auth-db
       MYSQL_PORT: 3306
+      JWT_SECRET: this_is_a_long_jwt_secret
     
     depends_on:
       - auth-db
