--- a/as-auth/package.json
+++ b/as-auth/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.0"
   },
