--- a/as-money-handler/package.json
+++ b/as-money-handler/package.json
@@ -2,7 +2,7 @@
   "name": "as-money-handler",
   "version": "0.0.0",
   "private": true,
-"scripts": {
+  "scripts": {
     "test": "NODE_ENV=test jest",
     "start": "NODE_ENV=prod node ./bin/www",
     "dev": "NODE_ENV=dev node --inspect=0.0.0.0:9230 ./bin/www"
@@ -16,6 +16,7 @@
     "mysql2": "^3.15.0"
   },
   "devDependencies": {
-    "jest": "^30.1.3"
+    "jest": "^30.1.3",
+    "supertest": "^7.1.4"
   }
 }
