--- a/as-money-handler/Dockerfile
+++ b/as-money-handler/Dockerfile
@@ -2,6 +2,13 @@ FROM node:22-alpine3.20
 
 WORKDIR /usr/src/app
 
+ARG MYSQL_DATABASE
+ARG MYSQL_USER
+ARG MYSQL_PASSWORD
+ARG MYSQL_HOSTNAME
+ARG MYSQL_PORT
+
+
 COPY package*.json ./
 RUN npm install
 
