--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "packageManager": "npm@11.4.2",
   "devDependencies": {
+    "eslint": "^9.38.0",
     "jest": "^30.2.0",
     "turbo": "^2.5.8"
   },
