--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,11 @@
     "dev": {
       "persistent": true,
       "cache": false
+    },
+
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
     }
   }
 }
