--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
     command: npm run dev
     ports:
       - 5000:5000
+    environment:
+      MYSQL_DATABASE: authdb
+      MYSQL_USER: authuser
+      MYSQL_PASSWORD: authpass
+      MYSQL_HOSTNAME: auth-db
+      MYSQL_PORT: 3306
+      JWT_SECRET: this_is_a_long_jwt_secret
     develop:
       watch:
         - action: sync+restart
