--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - 5000:5000
     environment:
+      APP_PORT: 5000
       MYSQL_DATABASE: authdb
       MYSQL_USER: authuser
       MYSQL_PASSWORD: authpass
@@ -59,7 +60,7 @@ services:
     healthcheck:
       test: mysqladmin ping -h localhost -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
       timeout: 10s
-      retries: 10
+      retries: 5
 
   # =====================
   # Money database
