--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -29,9 +29,12 @@
   },
   "devDependencies": {
     "@arthsaathi/typescript-config": "*",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@eslint/js": "^9.38.0",
     "@types/express": "^5.0.5",
     "@types/node": "^24.9.2",
+    "babel-jest": "^30.2.0",
     "eslint": "^9.38.0",
     "globals": "^14.0.0",
     "jiti": "^2.6.1",
