--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -31,6 +31,7 @@
     "@arthsaathi/typescript-config": "*",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@eslint/js": "^9.38.0",
     "@types/express": "^5.0.5",
     "@types/node": "^24.9.2",
