--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
     "@eslint/js": "^9.38.0",
+    "@jest/globals": "^30.2.0",
     "@types/express": "^5.0.5",
     "@types/node": "^24.9.2",
     "babel-jest": "^30.2.0",
