--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -36,6 +36,7 @@
     "@jest/globals": "^30.2.0",
     "@types/express": "^5.0.5",
     "@types/node": "^24.9.2",
+    "@types/supertest": "^6.0.3",
     "babel-jest": "^30.2.0",
     "eslint": "^9.38.0",
     "globals": "^14.0.0",
