--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@arthsaathi/typescript-config": "*",
