--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -18,7 +18,8 @@
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@arthsaathi/helpers": "*",
@@ -42,6 +43,7 @@
     "eslint": "^9.38.0",
     "globals": "^14.0.0",
     "jiti": "^2.6.1",
+    "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
