--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -15,5 +15,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@arthsaathi/typescript-config": "*",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@eslint/js": "^9.39.0",
+    "@jest/globals": "^30.2.0",
+    "babel-jest": "^30.2.0",
+    "eslint": "^9.39.0",
+    "globals": "^14.0.0",
+    "jest": "^30.2.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
+  },
+  "dependencies": {
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7",
+    "zod": "^4.1.12"
   }
 }
