--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -16,6 +16,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "exports": {
+    "./user" : "./src/user/User.ts"
+  },
   "devDependencies": {
     "@arthsaathi/typescript-config": "*",
     "@babel/core": "^7.28.5",
