--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     command: npm run dev
     ports:
       - 5000:5000
+    networks:
+      - expense-net
     environment:
       APP_PORT: 5000
       MYSQL_DATABASE: authdb
