--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -25,8 +25,11 @@
     "@arthsaathi/helpers": "*",
     "@arthsaathi/models": "*",
     "@types/morgan": "^1.9.10",
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
