--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -11,13 +11,12 @@
   ],
   "license": "ISC",
   "author": "Mohit Ranjan",
-  "type": "commonjs",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc --watch",
+    "build": "tsc"
   },
   "exports": {
-    "./user" : "./src/user/User.ts"
+    "./user": "./src/user/User.ts"
   },
   "devDependencies": {
     "@arthsaathi/typescript-config": "*",
@@ -34,6 +33,8 @@
     "typescript-eslint": "^8.46.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
     "zod": "^4.1.12"
