--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -19,7 +19,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@arthsaathi/helpers": "*",
