--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -20,7 +20,8 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint"
   },
   "dependencies": {
     "@arthsaathi/helpers": "*",
