added lint script in turbo

--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,10 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
+    },
+
+    "lint": {
+      "dependsOn": ["^lint"]
     }
   }
 }
