--- a/.github/workflows/pr-validate.yaml
+++ b/.github/workflows/pr-validate.yaml
@@ -1,6 +1,6 @@
-name: validate-pr
+name: test-pr
 
-run-name: Validate PR / Lint checks
+run-name: Validate PR / Tests
 
 on:
   pull_request
@@ -15,4 +15,4 @@ jobs:
           node-version: '22'
       - run: npm ci --frozen-lockfile
       - run: npm i -g turbo@2.5.8
-      - run: turbo run lint
+      - run: turbo run test
