--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
+  },
+  "devDependencies": {
+    "@arthsaathi/typescript-config": "*",
+    "jest": "^30.2.0",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "zod": "^4.1.12"
   }
 }
