added types for JWT

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@arthsaathi/helpers": "*",
     "@arthsaathi/models": "*",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
