added models for cash flow and cash flow categories. Removed redundant eslint config

--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -16,7 +16,9 @@
     "build": "tsc"
   },
   "exports": {
-    "./user": "./src/user/User.ts"
+    "./user": "./src/user/User.ts",
+    "./cashFlow": "./src/money/CashFlow.ts",
+    "./cashFlowCategory": "./src/money/CashFlowCategory.ts"
   },
   "devDependencies": {
     "@arthsaathi/typescript-config": "*",
