--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "author": "Mohit Ranjan",
   "exports": {
-    "./messages" : "./src/constants/messages.ts",
+    "./messages": "./src/constants/messages.ts",
     "./codes": "./src/constants/codes.ts",
-    "./error": "./src/error/customError.ts"
+    "./error": "./src/error/customError.ts",
+    "./categories": "./src/constants/categories.ts",
+    "./userIdGetter": "./src/middlewares/userGetter.ts",
+    "./errorHandler": "./src/middlewares/errorHandlers.ts"
   },
   "scripts": {
     "dev": "tsc --watch",
@@ -24,6 +27,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^4.1.12"
   }
 }
