--- a/apps/money-handler/swagger/swagger.yaml
+++ b/apps/money-handler/swagger/swagger.yaml
@@ -52,7 +52,7 @@ paths:
                   message:
                     example: Invalid sub category name. Please enter a valid name
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
     get:
       summary: Get all or a specific sub category
@@ -119,7 +119,7 @@ paths:
                   message:
                     example: No sub categories created yet
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
     put:
       summary: Modify a specific sub category
@@ -179,7 +179,7 @@ paths:
                   message:
                     example: Sub category not found
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
     delete:
       summary: Delete a specific sub category
@@ -229,7 +229,7 @@ paths:
                   message:
                     example: Sub category not found
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
   /api/cashflow:
     post:
@@ -270,7 +270,7 @@ paths:
                   message:
                     example: Cash flow created successfully
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
     get:
       summary: Get cash flows
@@ -368,7 +368,7 @@ paths:
                   message:
                     example: No cash flows found
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
     put:
       summary: Modify a specific cash flow
@@ -441,7 +441,7 @@ paths:
                   message:
                     example: Failed to modify the specific cash flow. Please try again later
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
     delete:
       summary: Delete a specific cash flow
@@ -493,7 +493,7 @@ paths:
                   message:
                     example: Failed to delete the specific cash flow. Please try again later
         "401":
-          $ref: '#/components/responses/UnauthorizedError'
+          $ref: "#/components/responses/UnauthorizedError"
 
 components:
   securitySchemes:
