--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "devDependencies": {
     "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
     "jest": "^30.2.0",
+    "prettier": "3.6.2",
     "turbo": "^2.5.8"
   },
   "workspaces": [
