--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,10 @@
       "dependsOn": ["^lint"]
     },
 
+    "lint-fix": {
+      "dependsOn": ["^lint-fix"]
+    },
+
     "test": {
       "dependsOn": ["^test"]
     }
