--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ http {
         server auth:5000;
     }
 
+    upstream reporter {
+        server reporter:5002;
+    }
+
     server {
         listen 80;
 
@@ -24,6 +28,12 @@ http {
         location /api/cashflow {
             auth_request /authenticate;
             proxy_pass http://money_handler$uri;
+            auth_request_set $auth_status $upstream_status;
+        }
+
+        location /api/reports {
+            auth_request /authenticate;
+            proxy_pass http://reporter$uri;
             auth_request_set $auth_status $upstream_status;
         }
 
