added reports get handler and nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,21 +19,21 @@ http {
     server {
         listen 80;
 
-        location /api/category {
+        location ^~ /api/category {
             auth_request /authenticate;
-            proxy_pass http://money_handler$uri;
+            proxy_pass http://money_handler$request_uri;
             auth_request_set $auth_status $upstream_status;
         }
 
-        location /api/cashflow {
+        location ^~ /api/cashflow {
             auth_request /authenticate;
-            proxy_pass http://money_handler$uri;
+            proxy_pass http://money_handler$request_uri;
             auth_request_set $auth_status $upstream_status;
         }
 
-        location /api/reports {
+        location ^~ /api/reports {
             auth_request /authenticate;
-            proxy_pass http://reporter$uri;
+            proxy_pass http://reporter$request_uri;
             auth_request_set $auth_status $upstream_status;
         }
 
