--- a/nginx.conf
+++ b/nginx.conf
@@ -12,18 +12,28 @@ http {
         server auth:5000;
     }
 
+    upstream reporter {
+        server reporter:5002;
+    }
+
     server {
         listen 80;
 
-        location /api/category {
+        location ^~ /api/category {
             auth_request /authenticate;
-            proxy_pass http://money_handler$uri;
+            proxy_pass http://money_handler$request_uri;
             auth_request_set $auth_status $upstream_status;
         }
 
-        location /api/cashflow {
+        location ^~ /api/cashflow {
             auth_request /authenticate;
-            proxy_pass http://money_handler$uri;
+            proxy_pass http://money_handler$request_uri;
+            auth_request_set $auth_status $upstream_status;
+        }
+
+        location ^~ /api/reports {
+            auth_request /authenticate;
+            proxy_pass http://reporter$request_uri;
             auth_request_set $auth_status $upstream_status;
         }
 
