--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,13 +2,17 @@
   "name": "arthsaathi",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "jest": {
+    "preset": "jest-expo"
+  },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@arthsaathi/ui": "*",
@@ -42,6 +46,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
