--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -15,7 +15,8 @@
     "./error": "./src/error/customError.ts",
     "./categories": "./src/constants/categories.ts",
     "./userIdGetter": "./src/middlewares/userGetter.ts",
-    "./errorHandler": "./src/middlewares/errorHandlers.ts"
+    "./errorHandler": "./src/middlewares/errorHandlers.ts",
+    "./hooks": "./src/hooks/index.ts"
   },
   "scripts": {
     "dev": "tsc --watch",
@@ -27,6 +28,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.10",
     "expo": "^51.0.39",
     "expo-constants": "^16.0.2",
     "expo-dev-client": "^4.0.29",
