--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,10 +24,12 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@arthsaathi/helpers": "*",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.90.10",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.17",
