--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
             auth_request_set $auth_status $upstream_status;
         }
 
-        location /api/auth {
+        location ^~ /api/auth {
             add_header Access-Control-Allow-Origin '*' always;
             if ($request_method = 'OPTIONS') {
                 add_header Access-Control-Allow-Origin '*';
