applied temp fix to the pipeline for an issue

--- a/.github/workflows/pr-validate.yaml
+++ b/.github/workflows/pr-validate.yaml
@@ -15,3 +15,5 @@ jobs:
       - run: npm ci --frozen-lockfile
       - run: npm i -g turbo@2.5.8
       - run: turbo run test
+      # Applying the following patch to node_modules due to this: https://github.com/expo/expo/issues/40184
+      - run: sed -i 's/^/\/\/ /' node_modules/expo-router/build/testing-library/expect.js
