Mobile dev setup (#16)
* added basic packages for start off

* added login screen with initial setup

* modified tabs to signed in layout for versatile behaviour

* updated landing and login page for better UI

* Added register screen

* added expo secure store, zustand, and necessary dependencies

* lockfile changes

* added jest for testing

* added basic setup for jest and msw

* added dependencies

* added register test

* added dependencies for testing with msw

* added msw server for running in tests

* added more dependencies for testing and fetching requests

* added login functionality with tests and UI

* updated route for auth in nginx config

* applied temp fix to the pipeline for an issue

--- a/.github/workflows/pr-validate.yaml
+++ b/.github/workflows/pr-validate.yaml
@@ -14,4 +14,6 @@ jobs:
           node-version: "22"
       - run: npm ci --frozen-lockfile
       - run: npm i -g turbo@2.5.8
+      # Applying the following patch to node_modules due to this: https://github.com/expo/expo/issues/40184
+      - run: sed -i 's/^/\/\/ /' node_modules/expo-router/build/testing-library/expect.js
       - run: turbo run test
