--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -15,7 +15,8 @@
     "./error": "./src/error/customError.ts",
     "./categories": "./src/constants/categories.ts",
     "./userIdGetter": "./src/middlewares/userGetter.ts",
-    "./errorHandler": "./src/middlewares/errorHandlers.ts"
+    "./errorHandler": "./src/middlewares/errorHandlers.ts",
+    "./hooks": "./src/hooks/index.ts"
   },
   "scripts": {
     "dev": "tsc --watch",
@@ -23,12 +24,27 @@
   },
   "devDependencies": {
     "@arthsaathi/typescript-config": "*",
-    "jest": "^30.2.0",
+    "jest": "^29.7.0",
+    "msw": "^2.12.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
+    "expo": "^51.0.39",
+    "expo-constants": "^16.0.2",
+    "expo-dev-client": "^4.0.29",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-linking": "^6.3.1",
+    "expo-router": "^5.1.7",
+    "expo-secure-store": "~13.0.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "zod": "^4.1.12"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   }
 }
