--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,21 +14,23 @@
   ],
   "license": "ISC",
   "author": "Mohit Ranjan",
-  "type": "commonjs",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\""
   },
   "devDependencies": {
     "@arthsaathi/typescript-config": "*",
     "jest": "^30.2.0",
+    "msw": "^2.12.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@arthsaathi/helpers": "*",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.90.10",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.17",
