--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -10,7 +10,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.codesutra.arthsaathi"
+      "bundleIdentifier": "com.codesutra.arthsaathi",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
